# satchmo-core

./: satchmo-core.cabal  stack.yaml
Satchmo/: Core.hs
Satchmo/Core/: Boolean.hs  Data.hs  Decode.hs  Formula.hs  MonadSAT.hs  Primitive.hs
Satchmo/Core/SAT/: .Minisat.hs.swp  Minisat.hs  StdOut.hs
