Name:           satchmo-core
Version:        0.5.1
Cabal-version:  >= 1.9.2
Build-type:     Simple

Library
    Ghc-options:        -W -fno-warn-incomplete-patterns
    Extensions:           TypeFamilies
    Build-Depends:        base >= 4.2 && < 5.0
                        , containers == 0.5.*
                        , array == 0.4.*
                        , mtl == 2.1.*
                        , transformers == 0.3.*
                        , minisat
    Exposed-Modules:      Satchmo.Core
                        , Satchmo.Core.Boolean
                        , Satchmo.Core.Data
                        , Satchmo.Core.Decode
                        , Satchmo.Core.Formula
                        , Satchmo.Core.MonadSAT
                        , Satchmo.Core.Primitive
                        , Satchmo.Core.SAT.Minisat
                        , Satchmo.Core.SAT.StdOut
