Name:           satchmo-core
Version:        0.7.6
Cabal-version:  >= 1.9.2
Build-type:     Simple

Library
    Ghc-options:        -W -fno-warn-incomplete-patterns
    Extensions:           TypeFamilies
    Build-Depends:        base
                        , containers
                        , array
                        , mtl
                        , transformers
                        , minisat
    Exposed-Modules:      Satchmo.Core
                        , Satchmo.Core.Boolean
                        , Satchmo.Core.Data
                        , Satchmo.Core.Decode
                        , Satchmo.Core.Formula
                        , Satchmo.Core.MonadSAT
                        , Satchmo.Core.Primitive
                        , Satchmo.Core.SAT.Minisat
                        , Satchmo.Core.SAT.StdOut
